# Inspireme

./: README.md
Inspireme/: CMakeLists.txt  pubspec.yaml
Inspireme/.dart_tool/: package_config.json  package_config_subset
Inspireme/.dart_tool/extension_discovery/: vs_code.json
Inspireme/.dart_tool/flutter_build/39c1184015e90e7938f8d7fb27498d9d/: .filecache  debug_bundle_windows-x64_assets.stamp  flutter_assets.d  kernel_snapshot.stamp  kernel_snapshot_native_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  native_assets.d  native_assets.stamp  outputs.json  unpack_windows.stamp  windows_engine_sources.d
Inspireme/android/app/: build.gradle
Inspireme/android/app/src/main/kotlin/com/example/inspire/: MainActivity.kt
Inspireme/android/gradle/wrapper/: gradle-wrapper.properties
Inspireme/ios/Runner.xcodeproj/: project.pbxproj
Inspireme/lib/: main.dart
Inspireme/lib/models/: meditation_session.dart  user_model.dart  wellness_activity.dart
Inspireme/lib/screens/: home_screen.dart  mindfulness_screen.dart  profile_screen.dart  progress_screen.dart  quotes_screen.dart  sign_in_screen.dart  welcome_screen.dart
Inspireme/lib/services/: auth_service.dart
Inspireme/lib/theme/: app_theme.dart
Inspireme/lib/widgets/: daily_quote_widget.dart  wellness_activity_card.dart
Inspireme/lib/widgets/common/: app_background.dart
Inspireme/macos/Runner/Configs/: AppInfo.xcconfig
Inspireme/test/: widget_test.dart
Inspireme/windows/runner/: Runner.rc
inspireme/: pubspec.yaml
inspireme/lib/: main.dart
(+33 files in other folders)
